# tablicesSAAS

./: .env.example  .gitignore  Makefile  alembic.ini  create-project-structure.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 41be8bec823c_add_formula_field_type.py  9b099d47e78e_init_models.py  b22325a3420d_add_views_table.py  c90041a6eda7_fix_formula_enum_case.py
requirements/: base.in  base.txt  dev.in  dev.txt
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: aggregate.py  auth.py  data.py  export.py  fields.py  group.py  import_data.py  tables.py  views.py
src/app/core/: config.py  database.py
src/app/middleware/: auth_middleware.py
src/app/models/: __init__.py  field.py  models.py  refresh_token.py  share.py  table.py  types.py  user.py  view.py
src/app/schemas/: aggregate.py  auth.py  data.py  export.py  field.py  group.py  import_data.py  table.py  view.py
src/app/services/: aggregate_service.py  auth_service.py  data_service.py  export_service.py  field_service.py  formula_service.py  group_service.py  import_service.py  table_service.py  view_service.py
table-saas-frontend/: README.md  create-frontend-structure.sh  env.d.ts  package-lock.json  package.json  postcss.config.js  vite.config.ts
table-saas-frontend/src/: App.vue  main.ts  style.css
table-saas-frontend/src/core/api/: auth.ts  client.ts
table-saas-frontend/src/core/auth/: guards.ts
table-saas-frontend/src/core/router/: index.ts
table-saas-frontend/src/core/stores/: auth.ts
table-saas-frontend/src/core/types/: api.types.ts  (+2 more)
(+25 files in other folders)
