[project]
name = "table-saas-backend"
version = "0.1.0"
description = "SaaS конструктор таблиц"
authors = [{name = "Your Name"}]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_interface"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
